  11 May 2014; Poncho <poncho@spahan.ch> +metadata.xml,
  -files/fix-seeing-double-torrents.patch, deluge-9999.ebuild:
  net-p2p/deluge: switch to develop branch